--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://maheshshanbhag.github.io/visa_system",
   "name": "visa_sysyem",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -13,6 +16,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.3",
+    "gh-pages": "^6.3.0",
     "ghpages": "^0.0.10",
     "gsap": "^3.12.7",
     "react": "^19.0.0",
