--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.3",
+    "framer-motion": "^12.9.2",
     "gh-pages": "^6.3.0",
     "ghpages": "^0.0.10",
     "gsap": "^3.12.7",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
