--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.3",
-    "framer-motion": "^12.9.2",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^6.3.0",
     "ghpages": "^0.0.10",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^5.0.0-beta.21",
+    "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-glsl": "^1.4.1"
   }
 }
